--- a/penyedia.html
+++ b/penyedia.html
@@ -61,12 +61,24 @@
     <nav class="navbar navbar-expand-lg bg-white border-bottom px-3">
       <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="#">
-          <span class="text-danger fs-4 me-2">♥</span>
-          Ruang Sejiwa
+          ❤️ Ruang Sejiwa
         </a>
-        <div class="collapse navbar-collapse">
-          <ul class="navbar-nav ms-3">
-            <li class="nav-item"><a class="nav-link" href="#">Beranda</a></li>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarNav"
+          aria-controls="navbarNav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNav">
+          <ul class="navbar-nav ms-auto">
+            <li class="nav-item">
+              <a class="nav-link" href="index.html">Beranda</a>
+            </li>
             <li class="nav-item"><a class="nav-link" href="#">Edukasi</a></li>
             <li class="nav-item">
               <a class="nav-link" href="screening.html">Screening</a>
@@ -74,7 +86,9 @@
             <li class="nav-item">
               <a class="nav-link" href="#">Konsultasi</a>
             </li>
-            <li class="nav-item"><a class="nav-link" href="#">Komunitas</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="komunitas.html">Komunitas</a>
+            </li>
             <li class="nav-item">
               <a class="nav-link active fw-bold" href="penyedia.html"
                 >Penyedia</a
@@ -91,91 +105,120 @@
       <h1 class="fw-bold">Penyedia Layanan Kesehatan Mental</h1>
 
       <!-- Search & Filters -->
-      <div
-        class="d-flex flex-row text-nowrap gap-2 mb-4 justify-content-between"
-      >
-        <input
-          type="text"
-          class="form-control flex-grow-1 rounded-3"
-          placeholder="Cari: psikolog/psikiater/klinik..."
-        />
-        <button class="text-start btn btn-outline-primary px-5 rounded-3">
-          Lokasi saya
-        </button>
-        <button class="btn btn-outline-secondary px-5 rounded-3">Online</button>
-        <button class="btn btn-outline-secondary px-5 rounded-3">
-          Offline
-        </button>
+      <div class="row g-2 mb-4">
+        <div class="col-12 col-lg">
+          <input
+            type="text"
+            class="form-control rounded-3"
+            placeholder="Cari: psikolog/psikiater/klinik..."
+          />
+        </div>
+        <div class="col-12 col-md-auto">
+          <button
+            type="button"
+            class="btn btn-outline-primary px-lg-5 px-sm-3 mx-2"
+          >
+            Lokasi saya
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary px-lg-5 px-sm-3 mx-2"
+          >
+            Online
+          </button>
+          <button
+            type="button"
+            class="btn btn-outline-secondary px-lg-5 px-sm-3-lg mx-2"
+          >
+            Offline
+          </button>
+        </div>
       </div>
 
       <!-- Provider Card -->
       <div class="card mb-3 rounded-3">
-        <div class="card-body d-flex justify-content-between align-items-start">
-          <div>
+        <div
+          class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
+        >
+          <div class="flex-grow-1">
             <h5 class="fw-bold mb-1">Klinik Sejiwa Harmoni</h5>
             <p class="mb-1 text-muted">Psikiater & Psikolog • Offline/Online</p>
             <small class="text-muted"
               >± 1.1 km • 4.8⭐ • Buka 09:00-20:00</small
             >
           </div>
-          <div class="d-flex flex-lg-row flex-sm-column gap-2">
-            <button class="btn btn-outline-primary btn-sm rounded-3 px-5">
+          <div
+            class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+          >
+            <button class="btn btn-outline-primary btn-sm rounded-3 px-4">
               Detail
             </button>
-            <button class="btn btn-first btn-sm rounded-3 px-5">
+            <button class="btn btn-first btn-sm rounded-3 px-4">
               Buat Janji
             </button>
           </div>
         </div>
       </div>
       <div class="card mb-3 rounded-3">
-        <div class="card-body d-flex justify-content-between align-items-start">
-          <div>
+        <div
+          class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
+        >
+          <div class="flex-grow-1">
             <h5 class="fw-bold mb-1">Mindful Center</h5>
             <p class="mb-1 text-muted">Psikolog Klinis • Online</p>
             <small class="text-muted"
               >0 km (online) • 4.7⭐ • Janji 10:00–22:00</small
             >
           </div>
-          <div class="d-flex flex-lg-row flex-sm-column gap-2">
-            <button class="btn btn-outline-primary btn-sm rounded-3 px-5">
+          <div
+            class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+          >
+            <button class="btn btn-outline-primary btn-sm rounded-3 px-4">
               Detail
             </button>
-            <button class="btn btn-first btn-sm rounded-3 px-5">
+            <button class="btn btn-first btn-sm rounded-3 px-4">
               Buat Janji
             </button>
           </div>
         </div>
       </div>
       <div class="card mb-3 rounded-3">
-        <div class="card-body d-flex justify-content-between align-items-start">
-          <div>
+        <div
+          class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
+        >
+          <div class="flex-grow-1">
             <h5 class="fw-bold mb-1">RS Jiwa Kota</h5>
             <p class="mb-1 text-muted">Layanan Darurat • 24/7</p>
             <small class="text-muted">± 5.4 km • 119 ext 8 • Rujukan IGD</small>
           </div>
-          <div class="d-flex flex-lg-row flex-sm-column gap-2">
-            <button class="btn btn-outline-primary btn-sm rounded-3 px-5">
+          <div
+            class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+          >
+            <button class="btn btn-outline-primary btn-sm rounded-3 px-4">
               Detail
             </button>
-            <button class="btn btn-first btn-sm rounded-3 px-5">
+            <button class="btn btn-first btn-sm rounded-3 px-4">
               Buat Janji
             </button>
           </div>
         </div>
       </div>
       <div class="card mb-3 rounded-3">
-        <div class="card-body d-flex justify-content-between align-items-start">
-          <div>
+        <div
+          class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
+        >
+          <div class="flex-grow-1">
             <h5 class="fw-bold mb-1">Praktek dr. Mira, Sp.KJ</h5>
             <p class="mb-1 text-muted">Psikiater • Offline</p>
             <small class="text-muted">± 3.2 km • 4.9⭐ • Selasa & Kamis</small>
           </div>
-          <div class="d-flex flex-lg-row flex-sm-column gap-2">
-            <button class="btn btn-outline-primary btn-sm rounded-3 px-5">
+          <div
+            class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+          >
+            <button class="btn btn-outline-primary btn-sm rounded-3 px-4">
               Detail
             </button>
-            <button class="btn btn-first btn-sm rounded-3 px-5">
+            <button class="btn btn-first btn-sm rounded-3 px-4">
               Buat Janji
             </button>
           </div>
@@ -184,7 +227,7 @@
     </div>
 
     <!-- Footer Section -->
-    <footer class="fixed-bottom">
+    <footer class="mt-5">
       <div class="container">
         <p>
           &copy; 2025 Ruang Sejiwa 󠁯•󠁏󠁏 Edukasi 󠁯•󠁏󠁏 Screening 󠁯•󠁏󠁏 Konsultasi
