--- a/komunitas.html
+++ b/komunitas.html
@@ -40,7 +40,7 @@
               <a class="nav-link" href="screening.html">Screening</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Konsultasi</a>
+              <a class="nav-link" href="konsultasi.html">Konsultasi</a>
             </li>
             <li class="nav-item"><a class="nav-link active fw-bold" href="komunitas.html">Komunitas</a></li>
             <li class="nav-item">
@@ -58,7 +58,7 @@
      <!-- Komunitas Section -->
     <section class="py-5">
       <div class="container">
-        <h2 class="fw-bold">Komunitas</h2>
+        <h1 class="fw-bold">Komunitas</h1>
         <p class= text-muted mb-4">
           Ruang aman untuk saling mendukung. Pilih grup yang sesuai minat dan
           kebutuhanmu.
