--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Penyedia</title>
+    <title>Beranda</title>
     <!-- Bootstrap 5 CDN -->
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css"
@@ -39,7 +39,7 @@
               <a class="nav-link" href="screening.html">Screening</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Konsultasi</a>
+              <a class="nav-link" href="konsultasi.html">Konsultasi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="komunitas.html">Komunitas</a>
