--- a/penyedia.html
+++ b/penyedia.html
@@ -84,7 +84,7 @@
               <a class="nav-link" href="screening.html">Screening</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Konsultasi</a>
+              <a class="nav-link" href="konsultasi.html">Konsultasi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="komunitas.html">Komunitas</a>
@@ -101,7 +101,7 @@
     </nav>
 
     <!-- Main Content -->
-    <div class="container mt-4">
+    <div class="container py-5">
       <h1 class="fw-bold">Penyedia Layanan Kesehatan Mental</h1>
 
       <!-- Search & Filters -->
