--- a/screening.html
+++ b/screening.html
@@ -43,7 +43,7 @@
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Konsultasi</a>
+              <a class="nav-link" href="konsultasi.html">Konsultasi</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="komunitas.html">Komunitas</a>
@@ -58,14 +58,14 @@
     </nav>
 
     <!-- Container -->
-    <div class="container my-4">
-      <h5>
+    <div class="container py-5">
+      <h1>
         <strong
           >Screening Mandiri – SRQ-20 (Langkah
           <span id="current-step">1</span>/<span id="total-steps"></span
           >)</strong
         >
-      </h5>
+      </h1>
       <p class="text-muted">
         Jawab Ya/Tidak untuk 2 minggu terakhir. Waktu pengerjaan ±3 menit
       </p>
@@ -133,7 +133,7 @@
       const nextBtn = document.getElementById("next-btn");
       const questionNumber = document.getElementById("question-number");
       const answersSection = document.getElementById("answers-section");
-      const mainTitle = document.querySelector("h5");
+      const mainTitle = document.querySelector("h1");
       const progressContainer = document.querySelector(".col-9");
       const questionCard = document.getElementById("question-card");
       const navButtonsContainer = backBtn.parentElement;
@@ -306,7 +306,7 @@
               <!-- <div class="col-md-4"> -->
               <div class="card">
                 <div class="card-body">
-                  <h5>Langkah Selanjutnya</h5>
+                  <h3>Langkah Selanjutnya</h3>
                   <button class="btn btn-primary mb-2 w-100 fw-bold p-2" onclick="window.location.href='penyedia.html'">
                     Buat Janji Konsultasi
                   </button>
@@ -333,7 +333,7 @@
             <div class="col-lg-12 mt-4">
             <div class="card">
               <div class="card-body">
-                <h5>Catatan &amp; Privasi</h5>
+                <h3>Catatan &amp; Privasi</h3>
                 <ul>
                   <li>
                     Hasil ini bersifat indikatif (bukan diagnosis). Untuk
