--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
           >
         </div>
         <button id="btnStart" class="btn btn-dark btn-md px-5">
-          Mulai SRQ-20
+          Mulai Screening
         </button>
       </div>
     </section>
