--- a/screening.html
+++ b/screening.html
@@ -67,7 +67,8 @@
         >
       </h1>
       <p class="text-muted">
-        Jawab Ya/Tidak untuk 2 minggu terakhir. Waktu pengerjaan ±3 menit
+        Jawab Ya/Tidak untuk <strong>2 bulan</strong> terakhir. Waktu pengerjaan
+        ±3 menit
       </p>
       <!-- Progress Bar -->
       <div class="col-9">
