--- a/komunitas.html
+++ b/komunitas.html
@@ -68,32 +68,39 @@
         <div class="col-12 col-lg">
           <input
             type="text"
+            id="search-input"
             class="form-control rounded-3"
             placeholder="Cari grup, topik..."
           />
         </div>
-        <div class="col-12 col-md-auto">
+        <div class="col-12 col-md-auto" id="filter-buttons">
           <button
             type="button"
             class="btn btn-outline-secondary active px-lg-5 px-sm-3"
+            data-filter="semua"
           >
             Semua topik
           </button>
           <button
             type="button"
             class="btn btn-outline-primary px-lg-5 px-sm-3"
+            data-filter="tipe"
+            data-value="pemula"
           >
             Pemula
           </button>
           <button
             type="button"
             class="btn btn-outline-success px-lg-5 px-sm-3-lg"
+            data-filter="paling-aktif"
           >
             Paling Aktif
           </button>
           <button
             type="button"
             class="btn btn-outline-danger px-lg-5 px-sm-3-lg"
+            data-filter="tipe"
+            data-value="privat"
           >
             Privat
           </button>
@@ -103,22 +110,36 @@
         <div class="row">
             <div class="col-md-9">
  <!-- Community Groups Cards -->
-        <div class="row">
+        <div class="row" id="community-groups-container">
           <!-- Group 1 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Mindful Breathing Club"
+            data-topik="Latihan 4-7-8 & box breathing bareng."
+            data-aktivitas="3"
+            data-tipe="pemula"
+          >
             <div class="card-custom">
               <h5 class="card-title">Mindful Breathing Club</h5>
               <p class="card-text">Latihan 4-7-8 & box breathing bareng.</p>
               <small class="text-muted">214 anggota • 3 posting/hari</small>
               <div class="mt-3">
-                <a href="#" class="btn btn-outline-primary btn-sm px-5">Gabung</a>
+                <a href="#" class="btn btn-outline-primary btn-sm px-5"
+                  >Gabung</a
+                >
                 <a href="#" class="btn btn-primary btn-sm px-5">Lihat</a>
               </div>
             </div>
           </div>
 
           <!-- Group 2 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Yoga After Work"
+            data-topik="20 menit regangan santai setiap 19.00 WIB."
+            data-aktivitas="2"
+            data-tipe="pemula"
+          >
             <div class="card-custom">
               <h5 class="card-title">Yoga After Work</h5>
               <p class="card-text">
@@ -126,14 +147,22 @@
               </p>
               <small class="text-muted">126 anggota • 2 posting/hari</small>
               <div class="mt-3">
-                <a href="#" class="btn btn-outline-primary btn-sm px-5">Gabung</a>
+                <a href="#" class="btn btn-outline-primary btn-sm px-5"
+                  >Gabung</a
+                >
                 <a href="#" class="btn btn-primary btn-sm px-5">Lihat</a>
               </div>
             </div>
           </div>
 
           <!-- Group 3 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Jurnal Emosi Harian"
+            data-topik="Refleksi 5 menit, template siap pakai."
+            data-aktivitas="5"
+            data-tipe="pemula"
+          >
             <div class="card-custom">
               <h5 class="card-title">Jurnal Emosi Harian</h5>
               <p class="card-text">Refleksi 5 menit, template siap pakai.</p>
@@ -146,7 +175,13 @@
           </div>
 
           <!-- Group 4 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Manajemen Stres Kerja"
+            data-topik="Tips prioritas & komunikasi asertif."
+            data-aktivitas="6"
+            data-tipe=""
+          >
             <div class="card-custom">
               <h5 class="card-title">Manajemen Stres Kerja</h5>
               <p class="card-text">Tips prioritas & komunikasi asertif.</p>
@@ -159,7 +194,13 @@
           </div>
 
           <!-- Group 5 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Tidur Nyenyak"
+            data-topik="Rutinitas tidur & sleep hygiene."
+            data-aktivitas="3"
+            data-tipe=""
+          >
             <div class="card-custom">
               <h5 class="card-title">Tidur Nyenyak</h5>
               <p class="card-text">Rutinitas tidur & sleep hygiene.</p>
@@ -172,7 +213,13 @@
           </div>
 
           <!-- Group 6 -->
-          <div class="col-md-6">
+          <div
+            class="col-md-6 community-card"
+            data-nama="Dukungan Burnout"
+            data-topik="Berbagi pengalaman & pemulihan bertahap."
+            data-aktivitas="7"
+            data-tipe="privat"
+          >
             <div class="card-custom">
               <h5 class="card-title">Dukungan Burnout</h5>
               <p class="card-text">Berbagi pengalaman & pemulihan bertahap.</p>
@@ -217,6 +264,69 @@
     <!-- Bootstrap JS & Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const searchInput = document.getElementById("search-input");
+        const filterButtonsContainer = document.getElementById("filter-buttons");
+        const communityCards = document.querySelectorAll(".community-card");
+
+        function applyFilters() {
+          const searchTerm = searchInput.value.toLowerCase();
+          const activeFilterBtn =
+            filterButtonsContainer.querySelector(".btn.active");
+          const filterType = activeFilterBtn.dataset.filter;
+          const filterValue = activeFilterBtn.dataset.value;
+
+          communityCards.forEach((card) => {
+            let isVisible = true;
+
+            // 1. Check search term against name and topic
+            const nama = card.dataset.nama.toLowerCase();
+            const topik = card.dataset.topik.toLowerCase();
+            if (!nama.includes(searchTerm) && !topik.includes(searchTerm)) {
+              isVisible = false;
+            }
+
+            // 2. Check active filter if still visible
+            if (isVisible && filterType) {
+              switch (filterType) {
+                case "tipe":
+                  if (card.dataset.tipe !== filterValue) {
+                    isVisible = false;
+                  }
+                  break;
+                case "paling-aktif":
+                  // "Paling Aktif" didefinisikan sebagai >= 5 posting/hari
+                  if (parseInt(card.dataset.aktivitas) < 5) {
+                    isVisible = false;
+                  }
+                  break;
+                // "semua" adalah default, tidak perlu filter tambahan
+              }
+            }
+
+            card.style.display = isVisible ? "block" : "none";
+          });
+        }
+
+        // Event listener untuk input pencarian
+        searchInput.addEventListener("input", applyFilters);
+
+        // Event listener untuk tombol filter (menggunakan delegasi)
+        filterButtonsContainer.addEventListener("click", (event) => {
+          const clickedButton = event.target.closest("button");
+          if (clickedButton) {
+            // Nonaktifkan semua tombol
+            filterButtonsContainer
+              .querySelectorAll(".btn")
+              .forEach((btn) => btn.classList.remove("active"));
+            // Aktifkan yang diklik
+            clickedButton.classList.add("active");
+            applyFilters();
+          }
+        });
+      });
+    </script>
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
