--- a/penyedia.html
+++ b/penyedia.html
@@ -109,26 +109,32 @@
         <div class="col-12 col-lg">
           <input
             type="text"
+            id="search-input"
             class="form-control rounded-3"
             placeholder="Cari: psikolog/psikiater/klinik..."
           />
         </div>
-        <div class="col-12 col-md-auto">
+        <div class="col-12 col-md-auto" id="filter-buttons">
           <button
             type="button"
-            class="btn btn-outline-primary px-lg-5 px-sm-3 mx-2"
+            class="btn btn-outline-primary px-lg-5 px-sm-3 mx-2 filter-btn active"
+            data-filter="all"
           >
             Lokasi saya
           </button>
           <button
             type="button"
-            class="btn btn-outline-secondary px-lg-5 px-sm-3 mx-2"
+            class="btn btn-outline-secondary px-lg-5 px-sm-3 mx-2 filter-btn"
+            data-filter="metode"
+            data-value="online"
           >
             Online
           </button>
           <button
             type="button"
-            class="btn btn-outline-secondary px-lg-5 px-sm-3-lg mx-2"
+            class="btn btn-outline-secondary px-lg-5 px-sm-3-lg mx-2 filter-btn"
+            data-filter="metode"
+            data-value="offline"
           >
             Offline
           </button>
@@ -136,7 +142,12 @@
       </div>
 
       <!-- Provider Card -->
-      <div class="card mb-3 rounded-3">
+      <div
+        class="card mb-3 rounded-3 provider-card"
+        data-nama="Klinik Sejiwa Harmoni"
+        data-layanan="psikiater psikolog"
+        data-metode="offline online"
+      >
         <div
           class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
         >
@@ -159,7 +170,12 @@
           </div>
         </div>
       </div>
-      <div class="card mb-3 rounded-3">
+      <div
+        class="card mb-3 rounded-3 provider-card"
+        data-nama="Mindful Center"
+        data-layanan="psikolog klinis"
+        data-metode="online"
+      >
         <div
           class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
         >
@@ -182,7 +198,12 @@
           </div>
         </div>
       </div>
-      <div class="card mb-3 rounded-3">
+      <div
+        class="card mb-3 rounded-3 provider-card"
+        data-nama="RS Jiwa Kota"
+        data-layanan="layanan darurat"
+        data-metode="offline"
+      >
         <div
           class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
         >
@@ -203,7 +224,12 @@
           </div>
         </div>
       </div>
-      <div class="card mb-3 rounded-3">
+      <div
+        class="card mb-3 rounded-3 provider-card"
+        data-nama="Praktek dr. Mira, Sp.KJ"
+        data-layanan="psikiater"
+        data-metode="offline"
+      >
         <div
           class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-start"
         >
@@ -239,6 +265,92 @@
     <!-- Bootstrap JS & Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const searchInput = document.getElementById("search-input");
+        const filterButtonsContainer =
+          document.getElementById("filter-buttons");
+        const providerCards = document.querySelectorAll(".provider-card");
+
+        function applyFilters() {
+          const searchTerm = searchInput.value.toLowerCase();
+          // Select active filters, but exclude the 'all' button from the logic if other filters are active
+          const activeSpecificFilters = filterButtonsContainer.querySelectorAll(
+            ".btn.active:not([data-filter='all'])"
+          );
+
+          providerCards.forEach((card) => {
+            let isVisible = true;
+
+            // 1. Check search term against name and services
+            const nama = card.dataset.nama.toLowerCase();
+            const layanan = card.dataset.layanan.toLowerCase();
+            if (!nama.includes(searchTerm) && !layanan.includes(searchTerm)) {
+              isVisible = false;
+            }
+
+            // 2. Check active filters if still visible and there are any specific filters
+            if (isVisible && activeSpecificFilters.length > 0) {
+              // Card must match ALL active filters
+              activeSpecificFilters.forEach((filterBtn) => {
+                const filterType = filterBtn.dataset.filter;
+                const filterValue = filterBtn.dataset.value;
+                const cardValue = card.dataset[filterType];
+
+                if (
+                  !cardValue ||
+                  !cardValue.toLowerCase().includes(filterValue)
+                ) {
+                  isVisible = false;
+                }
+              });
+            }
+
+            card.style.display = isVisible ? "block" : "none";
+          });
+        }
+
+        // Event listener for search input
+        searchInput.addEventListener("input", applyFilters);
+
+        // Event listener for filter buttons (using delegation)
+        filterButtonsContainer.addEventListener("click", (event) => {
+          const clickedButton = event.target.closest(".filter-btn");
+          if (!clickedButton) return;
+
+          const isAllButton = clickedButton.dataset.filter === "all";
+          const allButton = filterButtonsContainer.querySelector(
+            '[data-filter="all"]'
+          );
+
+          if (isAllButton) {
+            // If "Lokasi saya" (all) is clicked, deactivate others and activate it.
+            if (!clickedButton.classList.contains("active")) {
+              filterButtonsContainer
+                .querySelectorAll(".filter-btn.active")
+                .forEach((btn) => btn.classList.remove("active"));
+              clickedButton.classList.add("active");
+            }
+          } else {
+            // If another filter is clicked, toggle it and deactivate the "all" button.
+            clickedButton.classList.toggle("active");
+            if (allButton) allButton.classList.remove("active");
+
+            // If no other filters are active, reactivate the "all" button.
+            const anyOtherActive = filterButtonsContainer.querySelector(
+              ".filter-btn.active:not([data-filter='all'])"
+            );
+            if (!anyOtherActive && allButton) {
+              allButton.classList.add("active");
+            }
+          }
+          applyFilters();
+        });
+
+        // Initial filter application on page load
+        applyFilters();
+      });
+    </script>
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
