add komunitas link in screening

--- a/screening.html
+++ b/screening.html
@@ -311,7 +311,8 @@
                   <button class="btn btn-primary mb-2 w-100 fw-bold p-2" onclick="window.location.href='penyedia.html'">
                     Buat Janji Konsultasi
                   </button>
-                  <button class="btn btn-success mb-2 w-100 fw-bold p-2">
+                  <button class="btn btn-success mb-2 w-100 fw-bold p-2"
+                  onclick="window.location.href='komunitas.html'">
                     Gabung Komunitas
                   </button>
                   <button
