--- a/screening.html
+++ b/screening.html
@@ -308,7 +308,7 @@
               <div class="card">
                 <div class="card-body">
                   <h3>Langkah Selanjutnya</h3>
-                  <button class="btn btn-primary mb-2 w-100 fw-bold p-2" onclick="window.location.href='penyedia.html'">
+                  <button class="btn btn-primary mb-2 w-100 fw-bold p-2" onclick="window.location.href='konsultasi.html'">
                     Buat Janji Konsultasi
                   </button>
                   <button class="btn btn-success mb-2 w-100 fw-bold p-2"
