--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             >Bukan Diagnosis</span
           >
         </div>
-        <button id="btnStart" class="btn btn-primary btn-md px-5">
+        <button id="btnStart" class="h3 btn btn-primary btn-lg px-5 fw-bold">
           Mulai Screening
         </button>
       </div>
