--- a/index.html
+++ b/index.html
@@ -170,17 +170,11 @@
       </div>
     </footer>
 
-    <script>
-      document
-        .getElementById("btnStart")
-        .addEventListener("click", function () {
-          window.location.href = "screening.html";
-        });
-    </script>
-
     <!-- Bootstrap JS & Popper -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.min.js"></script>
+    <!-- Custom Script -->
+    <script src="js/index.js"></script>
     <!-- Bootstrap Icons -->
     <link
       rel="stylesheet"
