Refaktor Vanilla JS to Express JS

--- a/public/konsultasi.html
+++ b/public/konsultasi.html
@@ -50,6 +50,11 @@
               <a class="nav-link" href="penyedia.html">Penyedia</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">SOS</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html" title="Admin Login">
+                <i class="bi bi-box-arrow-in-right fs-5"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
@@ -203,6 +208,176 @@
                 <p class="mb-1 text-muted">Psikiater • Fokus: mood & sleep</p>
                 <small class="text-muted"
                   >Tarif: Rp. 400.000 / 45 menit • Online • 4.7⭐</small
+                >
+              </div>
+              <div
+                class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+              >
+                <button
+                  class="btn btn-first btn-sm rounded-3 px-4 btn-lihat-jadwal"
+                >
+                  Lihat Jadwal
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Provider Card -->
+          <div
+            class="card mb-3 rounded-3 provider-card"
+            data-nama="Budi Santoso, M.Psi, Psi"
+            data-fokus="hubungan,keluarga,komunikasi"
+            data-metode="online"
+            data-tarif="225000"
+            data-bahasa="indonesia"
+            data-ketersediaan="besok"
+            data-durasi="45"
+          >
+            <div
+              class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center"
+            >
+              <div class="flex-grow-1">
+                <h5 class="fw-bold mb-1">Budi Santoso, M.Psi, Psi</h5>
+                <p class="mb-1 text-muted">
+                  Psikolog Klinis • Fokus: hubungan, keluarga, komunikasi
+                </p>
+                <small class="text-muted"
+                  >Tarif: Rp. 225.000 / 45 menit • Online • 4.8⭐</small
+                >
+              </div>
+              <div
+                class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+              >
+                <button
+                  class="btn btn-first btn-sm rounded-3 px-4 btn-lihat-jadwal"
+                >
+                  Lihat Jadwal
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Provider Card -->
+          <div
+            class="card mb-3 rounded-3 provider-card"
+            data-nama="dr. Aisyah Putri, Sp.KJ"
+            data-fokus="depresi,trauma,ptsd"
+            data-metode="online"
+            data-tarif="350000"
+            data-bahasa="indonesia"
+            data-ketersediaan="minggu-ini"
+            data-durasi="45"
+          >
+            <div
+              class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center"
+            >
+              <div class="flex-grow-1">
+                <h5 class="fw-bold mb-1">dr. Aisyah Putri, Sp.KJ</h5>
+                <p class="mb-1 text-muted">
+                  Psikiater • Fokus: depresi, trauma, PTSD
+                </p>
+                <small class="text-muted"
+                  >Tarif: Rp. 350.000 / 45 menit • Online • 4.9⭐</small
+                >
+              </div>
+              <div
+                class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+              >
+                <button
+                  class="btn btn-first btn-sm rounded-3 px-4 btn-lihat-jadwal"
+                >
+                  Lihat Jadwal
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Provider Card -->
+          <div
+            class="card mb-3 rounded-3 provider-card"
+            data-nama="Citra Lestari, M.Psi, Psi"
+            data-fokus="pengembangan diri,karir,percaya diri"
+            data-metode="online"
+            data-tarif="180000"
+            data-bahasa="indonesia"
+            data-ketersediaan="hari-ini"
+            data-durasi="45"
+          >
+            <div
+              class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center"
+            >
+              <div class="flex-grow-1">
+                <h5 class="fw-bold mb-1">Citra Lestari, M.Psi, Psi</h5>
+                <p class="mb-1 text-muted">
+                  Psikolog • Fokus: pengembangan diri, karir, percaya diri
+                </p>
+                <small class="text-muted"
+                  >Tarif: Rp. 180.000 / 45 menit • Online • 4.7⭐</small
+                >
+              </div>
+              <div
+                class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+              >
+                <button
+                  class="btn btn-first btn-sm rounded-3 px-4 btn-lihat-jadwal"
+                >
+                  Lihat Jadwal
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Provider Card -->
+          <div
+            class="card mb-3 rounded-3 provider-card"
+            data-nama="dr. Eko Prasetyo, Sp.KJ"
+            data-fokus="adiksi,gangguan bipolar"
+            data-metode="online"
+            data-tarif="450000"
+            data-bahasa="indonesia"
+            data-ketersediaan="besok"
+            data-durasi="45"
+          >
+            <div
+              class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center"
+            >
+              <div class="flex-grow-1">
+                <h5 class="fw-bold mb-1">dr. Eko Prasetyo, Sp.KJ</h5>
+                <p class="mb-1 text-muted">
+                  Psikiater • Fokus: adiksi, gangguan bipolar
+                </p>
+                <small class="text-muted"
+                  >Tarif: Rp. 450.000 / 45 menit • Online • 4.8⭐</small
+                >
+              </div>
+              <div
+                class="d-flex flex-column flex-md-row gap-2 mt-3 mt-sm-0 flex-shrink-0"
+              >
+                <button
+                  class="btn btn-first btn-sm rounded-3 px-4 btn-lihat-jadwal"
+                >
+                  Lihat Jadwal
+                </button>
+              </div>
+            </div>
+          </div>
+          <!-- Provider Card -->
+          <div
+            class="card mb-3 rounded-3 provider-card"
+            data-nama="Dewi Anggraini, M.Psi, Psi"
+            data-fokus="kecemasan sosial,fobia"
+            data-metode="online"
+            data-tarif="210000"
+            data-bahasa="indonesia"
+            data-ketersediaan="minggu-ini"
+            data-durasi="45"
+          >
+            <div
+              class="card-body d-flex flex-column flex-sm-row justify-content-sm-between align-items-sm-center"
+            >
+              <div class="flex-grow-1">
+                <h5 class="fw-bold mb-1">Dewi Anggraini, M.Psi, Psi</h5>
+                <p class="mb-1 text-muted">
+                  Psikolog Klinis • Fokus: kecemasan sosial, fobia
+                </p>
+                <small class="text-muted"
+                  >Tarif: Rp. 210.000 / 45 menit • Online • 4.9⭐</small
                 >
               </div>
               <div
@@ -415,6 +590,57 @@
             <div class="card-footer text-muted small">
               Mohon periksa folder spam jika Anda tidak menerima email.
             </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Processing Payment Modal -->
+    <div
+      class="modal fade"
+      id="processingModal"
+      data-bs-backdrop="static"
+      data-bs-keyboard="false"
+      tabindex="-1"
+      aria-labelledby="processingModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body text-center py-4">
+            <div class="spinner-border text-primary mb-3" role="status">
+              <span class="visually-hidden">Loading...</span>
+            </div>
+            <h5 class="modal-title" id="processingModalLabel">
+              Memproses Pembayaran...
+            </h5>
+            <p class="text-muted">
+              Mohon tunggu sebentar, jangan tutup halaman ini.
+            </p>
+          </div>
+        </div>
+      </div>
+    </div>
+
+    <!-- Payment Success Modal -->
+    <div
+      class="modal fade"
+      id="successModal"
+      tabindex="-1"
+      aria-labelledby="successModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+          <div class="modal-body text-center py-4">
+            <i
+              class="bi bi-check-circle-fill text-success"
+              style="font-size: 3rem"
+            ></i>
+            <h5 class="modal-title mt-3" id="successModalLabel">
+              Pembayaran Berhasil!
+            </h5>
+            <p class="text-muted">Anda akan diarahkan ke halaman konfirmasi.</p>
           </div>
         </div>
       </div>
