--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
               <a class="nav-link" href="penyedia.html">Penyedia</a>
             </li>
             <li class="nav-item"><a class="nav-link" href="#">SOS</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html" title="Admin Login">
+                <i class="bi bi-box-arrow-in-right fs-5"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
