--- a/public/penyedia.html
+++ b/public/penyedia.html
@@ -95,6 +95,11 @@
               >
             </li>
             <li class="nav-item"><a class="nav-link" href="#">SOS</a></li>
+            <li class="nav-item">
+              <a class="nav-link" href="login.html" title="Admin Login">
+                <i class="bi bi-box-arrow-in-right fs-5"></i>
+              </a>
+            </li>
           </ul>
         </div>
       </div>
