--- a/public/konsultasi.html
+++ b/public/konsultasi.html
@@ -51,9 +51,7 @@
             </li>
             <li class="nav-item"><a class="nav-link" href="#">SOS</a></li>
             <li class="nav-item">
-              <a class="nav-link" href="login.html" title="Admin Login">
-                <i class="bi bi-box-arrow-in-right fs-5"></i>
-              </a>
+              <a class="nav-link" href="daftar-janji.html">Daftar Janji</a>
             </li>
           </ul>
         </div>
